<resources>
    <string name="app_name">Stundenmanager</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- Work Hours -->
    <string name="my_workhours">Meine Arbeitszeiten</string>
    <string name="tracking_notification_content">Tracking läuft...</string>
    <string name="contentDes_add">add working hour</string>
    <string name="contentDes_trackhours">tracking working hour</string>
    <string name="item_date">Datum: %1$s</string>
    <string name="item_period">Zeitraum: %1$s - %2$s</string>
    <string name="item_pause">Pause: %1$d Minuten </string>
    <string name="item_worked_hours">Gearbeitete Stunden: %1.2f</string>
    <string name="item_comment">Kommentar: %1$s</string>
    <string name="dialog_starttime">Startzeit (HH:mm) </string>
    <string name="dialog_endtime">Endzeit (HH:mm) </string>
    <string name="dialog_pause">Pause (in Minuten) </string>
    <string name="dialog_comment">Kommentar </string>
    <string name="dialog_savebtn">Speichern</string>
    <string name="auto_start">Automatisch gestartet</string>
    <string name="start_tracking">Tracking gestartet!</string>
    <string name="start_tracking_error">Fehler beim Starten des Trackings!</string>
    <string name="time_invalid">Ungültige Zeitangabe! Bitte HH:mm verwenden.</string>
    <string name="start_end_error">Startzeit kann nicht nach der Endzeit liegen!</string>
    <string name="hours_negative">Gearbeitete Stunden können nicht negativ sein!</string>
    <string name="calc_error">Fehler bei der Zeitberechnung:</string>
    <string name="time_saved">Arbeitszeit gespeichert!</string>
    <string name="saving_error">Fehler beim Speichern!</string>
    <string name="loading_error">Fehler beim Laden der Daten!</string>
    <string name="tracking_started">Zeiterfassung gestartet</string>
    <string name="tracking_stopped">Zeiterfassung gestoppt</string>
    <string name="workhours_date_hint">Date (dd/mm/yyyy)</string>
    <string name="date_invalid">Datum ungültig</string>

    <string name="saved_offline">Wird offline gespeichert, bitte die App bis zur nächsten Synchronisation nicht schließen!</string>
    <string name="synced_data">Offline-Daten synchronisiert</string>


    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="Login">Login</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="Register">Register</string>
    <string-array name="reason_array">
        <item>Urlaub</item>
        <item>Krankheit</item>
        <item>Stundenabbau</item>
        <item>Sonstiges</item>
    </string-array>

    <!--  Statistics and Reports -->
    <string-array name="time_filter_options">
        <item>Last 7 days</item>
        <item>Last month</item>
        <item>Last year</item>
    </string-array>
    <string name="overview_work">Work Overview</string>
    <string name="no_data_available">No data available</string>
    <string name="no_data_in_period">No data for the selected period</string>
    <string name="no_absences_in_period">No absences in the selected period.</string>

    <string name="booking_weekend">Booking on weekends is not permitted!</string>

    <string name="reports">Reports</string>
    <string name="work_time_report">Working time report</string>
    <string name="date">Date</string>
    <string name="planned">Planned</string>
    <string name="actually">Actually</string>
    <string name="workbreak">Break</string>
    <string name="create_report">Create report</string>
    <string name="export_report_pdf">Export as PDF</string>
    <string name="report_time_unknown">Unknown time period: </string>
    <string name="export_report_pdf_saved">PDF saved under: </string>
    <string name="export_report_pdf_err">Error during PDF export: </string>
    <string name="report_recycle_fail">Error during loading: </string>
    <string name="report_no_data">No data found for the selected period.</string>
    <string name="report_no_available">No report available for export.</string>


</resources>