<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReportsActivity">

    <TextView
        android:id="@+id/reports"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:paddingBottom="16dp"
        android:text="@string/reports"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/reports"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/linearLayout2" >

        <Spinner
            android:id="@+id/spinnerReportPeriod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:entries="@array/time_filter_options"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@id/reports" />

        <Button
            android:id="@+id/btnGenerateReport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="250dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/create_report"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinnerReportPeriod" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="?attr/colorSurface"
            android:padding="10dp">

            <TextView
                android:text="@string/date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:text="@string/planned"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:text="@string/actually"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:text="@string/workbreak"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="16sp"
                android:textStyle="bold"/>
        </LinearLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerReport"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/btnGenerateReport"
            app:layout_constraintBottom_toTopOf="@+id/btnExportPDF"
            tools:layout_editor_absoluteX="0dp" />

        <Button
            android:id="@+id/btnExportPDF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxWidth="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="35dp"
            android:text="@string/export_report_pdf"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>

    <!-- Menuleiste -->
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="264dp"
        android:background="#DDDDDD"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reports"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp">

        <ImageButton
            android:id="@+id/menu_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="Home"
            android:src="@drawable/homepage" />

        <ImageButton
            android:id="@+id/menu_workhours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="Work Hours"
            android:src="@drawable/workhours" />

        <ImageButton
            android:id="@+id/menu_absences"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="Absences"
            android:src="@drawable/absences" />

        <ImageButton
            android:id="@+id/menu_messages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="Messages"
            android:src="@drawable/messages" />

        <ImageButton
            android:id="@+id/menu_reports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="Reports"
            android:src="@drawable/reports" />

        <ImageButton
            android:id="@+id/menu_statistics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="Statistics"
            android:src="@drawable/statistics" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>